# turboquant-vllm

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  NOTICE  README.md  native-checkpoint-card.md  pyproject.toml  runtime-checkpoint-card.md
.github/workflows/: ci.yml  pre-commit.yml  tests.yml
csrc/: torch_bindings.cpp  tq3_gemv_bs1_fwht_smem.cu  tq3_gemv_bs1_fwht_smem.h  tq_weight_dequant.cu  tq_weight_dequant.h  tq_weight_gemv_bs1.cu  tq_weight_gemv_bs1.h  turbo_quant.cu
csrc/flute/: qgemm.cpp
examples/: mac-serve-tq3.py
scripts/: bench_mlx_vs_cpu.py  benchmark_dflash.py  benchmark_dual_model.py  benchmark_full_pipeline.py  benchmark_perplexity.py  benchmark_reap_tq.py  benchmark_spinquant_tq3.py  benchmark_throughput.py  phase2_benchmark.py  phase4_benchmark.py  publish_model.py  test_awq_export.py  test_combined.py  test_tq3_load.py  validate_weight_quant.py
tests/: bench_mlx_moe_switch.py  bench_real_model_tps.py  conftest.py  smoke_metal_kernel.py  test_3bit_packing.py  test_block_diagonal_wht.py  test_checkpoint_local_path.py  test_checkpoint_moe_roundtrip.py  test_cuda_norm_correction_fallback.py  test_eager_rotation_cache.py  test_forward_rotate_batched.py  test_fwht_input_cache.py  test_lloyd_max_cross_validation.py  test_mlx_fused_gate_up_split.py  test_mlx_gemv_bs1.py  test_mlx_linear_end_to_end.py  test_mlx_moe_loader_e2e.py  test_mlx_ops_parity.py  test_mlx_switch_linear_parity.py  test_moe_quant_method.py  test_moe_replay.py  test_native_backend_cache_spec.py  test_native_backend_local.py  test_native_backend_mse_packing.py  test_native_moe_loader.py  test_torch_ops.py  test_triton_fused_gemm.py  test_vllm_patch_compressor.py  test_weight_dequant_kernel.py  test_weight_quant.py  test_weight_quant_cpu.py  test_wrapper_nd_weight.py
tests/gpu/: _preflight.sh  run_on_verda.sh  test_native_backend_gpu.sh  test_tq3_gemv_bs1.py  test_tq3_gemv_bs1_fwht_smem.py  test_turboquant_online_gpu.py
tests/gpu/results/: pr5-a100-20260410-2241-testlog.txt  pr5-a100-20260410-2241.txt  vendor-triton-a100-20260410.txt
turboquant_vllm/: __init__.py  _vllm_plugin.py  build.py  checkpoint.py  expert_pruning.py  export.py  flute_build.py  learned_rotation.py  mlx_loader.py  mlx_metal_kernels.py  mlx_model.py  mlx_ops.py  moe_quant.py  native_backend.py  ops.py  test_load.py  torch_ops.py  tq_config.py  triton_ops.py  vllm_patch.py  vllm_quant.py  weight_quant.py
turboquant_vllm/flute/: __init__.py  ops.py  tune.py
turboquant_vllm/flute/integrations/: base.py  higgs.py  huggingface.py  learnable.py  vllm_utils.py
