[project]
name = "turboquant-plus-vllm"
version = "0.5.0"
description = "TurboQuant+ compression for vLLM. 4.3x weight compression + 3.7x KV cache, zero calibration."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "scipy>=1.11",
    "numpy>=1.24",
    "transformers>=4.57.6",
]
authors = [{name = "Hannu Varjoranta", email = "hannu@varjosoft.com"}]
keywords = ["quantization", "kv-cache", "vllm", "inference", "llm", "compression", "cuda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
vllm = ["vllm>=0.6"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.entry-points."vllm.general_plugins"]
turboquant_weight = "turboquant_vllm._vllm_plugin:register"

[project.urls]
Homepage = "https://github.com/varjoranta/turboquant-vllm"

[tool.hatch.build.targets.wheel]
packages = ["turboquant_vllm", "csrc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
